--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -1,8 +1,8 @@
 SECRET_KEY='o#4io9uszz-5a$#k1uwe*2m+tvsehhnmtf@s5a$#k1l4r%r984g#@2ht3y_'
 DJANGO_SETTINGS_MODULE='config.settings.local'
 DEBUG=1
-arvan_api_key='Apikey xx'
-arvan_channel_id='xx'
+ARVAN_API_KEY='Apikey xx'
+ARVAN_CHANNEL_ID='xx'
 DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 [::1] xx.ir'
 SQL_ENGINE='django.db.backends.postgresql'
 SQL_DATABASE='arad'
