--- a/.env.prod-sample
+++ b/.env.prod-sample
@@ -1,8 +1,8 @@
 SECRET_KEY='some_key'
 DJANGO_SETTINGS_MODULE='config.settings.production'
 DEBUG=0
-arvan_api_key='Apikey 2e4984b8-1eb2-54ff-bb96-d227b8b7955f'
-arvan_channel_id='eb1a9ed8-0782-43db-ae3b-8ead6b346395'
+ARVAN_API_KEY='Apikey 2e4984b8-1eb2-54ff-bb96-d227b8b7955f'
+ARVAN_CHANNEL_ID='eb1a9ed8-0782-43db-ae3b-8ead6b346395'
 ZARINPAL_MERCHANT_CODE="MERCHANT_CODE"
 IDPAY_MERCHANT_CODE="MERCHANT_CODE"
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
