--- a/.env.prod-sample
+++ b/.env.prod-sample
@@ -3,8 +3,6 @@ DJANGO_SETTINGS_MODULE='config.settings.production'
 DEBUG=0
 ARVAN_API_KEY='Apikey 2e4984b8-1eb2-54ff-bb96-d227b8b7955f'
 ARVAN_CHANNEL_ID='eb1a9ed8-0782-43db-ae3b-8ead6b346395'
-ZARINPAL_MERCHANT_CODE="MERCHANT_CODE"
-IDPAY_MERCHANT_CODE="MERCHANT_CODE"
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 SQL_ENGINE=django.db.backends.postgresql
 SQL_DATABASE=hello_django_prod
@@ -14,3 +12,6 @@ SQL_HOST=db
 SQL_PORT=5432
 DATABASE=postgres
 DJANGO_LOG_LEVEL='INFO'
+EMAIL_HOST='smtp.example.com'
+EMAIL_HOST_USER='someone@example.com'
+EMAIL_HOST_PASSWORD='xxxxxxxxxxxxxxxx'
