--- a/.env.prod-sample
+++ b/.env.prod-sample
@@ -15,3 +15,5 @@ DJANGO_LOG_LEVEL='INFO'
 EMAIL_HOST='smtp.example.com'
 EMAIL_HOST_USER='someone@example.com'
 EMAIL_HOST_PASSWORD='xxxxxxxxxxxxxxxx'
+ADMIN_NAME='NAME'
+ADMIN_EMAIL='NAME'
