--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 asgiref = "==3.5.*"
-django = "==3.2.*"
+django = ">=3.2.14"
 pytz = "==2021.*"
 sqlparse = "==0.4.*"
 pillow = "==9.1.*"
@@ -25,6 +25,7 @@ django-mptt = "==0.13.*"
 gunicorn = "==20.1.*"
 whitenoise = "==6.1.*"
 django-admin-honeypot = "==1.1.*"
+django-braces = "==1.15.*"
 
 [dev-packages]
 django-debug-toolbar = "==3.4.*"
