fix 127.0.0.1 problem in admin honey pot

--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -4,6 +4,7 @@ DEBUG=1
 ARVAN_API_KEY='Apikey xx'
 ARVAN_CHANNEL_ID='xx'
 DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 [::1] xx.ir'
+ZARINPAL_MERCHANT_CODE='xx'
 SQL_ENGINE='django.db.backends.postgresql'
 SQL_DATABASE='arad'
 SQL_USER='arad'
@@ -11,5 +12,6 @@ SQL_PASSWORD='arad'
 SQL_HOST='127.0.0.1'
 SQL_PORT='5432'
 DATABASE='postgres'
-ZARINPAL_MERCHANT_CODE='xx'
 GMAIL_KEY='xxxxxxxxxxxxxxxx'
+ADMIN_NAME='someone'
+ADMIN_EMAIL='someone@test.com'
