--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,7 @@ whitenoise = "==6.1.*"
 django-admin-honeypot = "==1.1.*"
 django-braces = "==1.15.*"
 flower = "==1.1.*"
+kavenegar = "*"
 
 [dev-packages]
 django-debug-toolbar = "==3.4.*"
