new view for CallBack handler

--- a/.env.dev.sample
+++ b/.env.dev.sample
@@ -5,6 +5,7 @@ ARVAN_API_KEY='Apikey xx'
 ARVAN_CHANNEL_ID='xx'
 DJANGO_ALLOWED_HOSTS='localhost 127.0.0.1 [::1] xx.ir'
 ZARINPAL_MERCHANT_CODE='xx'
+ZARINPAL_SANDBOX='1'
 SQL_ENGINE='django.db.backends.postgresql'
 SQL_DATABASE='arad'
 SQL_USER='arad'
