env file update

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,5 @@ DATABASE='postgres'
 GMAIL_KEY='xxxxxxxxxxxxxxxx'
 ADMIN_NAME='someone'
 ADMIN_EMAIL='someone@test.com'
+KAVENEGAR_API_KEY='xx'
+SMS_SENDER_NUMBER='xx'
