env file update

--- a/.env.sample
+++ b/.env.sample
@@ -13,7 +13,8 @@ SQL_PASSWORD='arad'
 SQL_HOST='127.0.0.1'
 SQL_PORT='5432'
 DATABASE='postgres'
-GMAIL_KEY='xxxxxxxxxxxxxxxx'
+EMAIL_HOST='smtp.gmail.com'
+EMAIL_HOST_USER='someone@gmail.com'
 ADMIN_NAME='someone'
 ADMIN_EMAIL='someone@test.com'
 KAVENEGAR_API_KEY='xx'
